deploy/ingress.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "cloudberry-k8s-ingress"
  namespace: "default"
  annotations:
    networking.gke.io/managed-certificates: "cloudberry-ai-certificate,cloudberry-ai-uk-certificate,cloudberry-ai-fi-certificate"
spec:
  rules:
  - host: cloudberryai.com
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: "hello"
            port:
              number: 80
status:
  loadBalancer: {}
